--- a/Project/style.css
+++ b/Project/style.css
@@ -33,12 +33,12 @@ body {
 
 #Options ul {
     display: inline-block;
-    margin-left: 276px;
+    margin-left: 485px;
 }
 
 #Options ul li {
     display: inline-block;
-    font-size: 9px;
+    font-size: 18px;
     margin: 5px;
 }
 
@@ -54,14 +54,34 @@ body {
 }
 
 #BodyCenter h2{
-    font-size: 25px;
+    font-size: 45px;
+    margin-bottom: -4px;
+    margin-top: 70px;
 }
 
 #BodyCenter p{
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: 100;
 }
 
 #BodyCenter ul li {
     display: inline-block;
     border: 1px solid white;
+    margin-right: 18px;
+    margin-top: 17px;
+    border-radius: 7px;
+    padding: 8px 50px;
+    font-size: 13px;
+    font-weight: 600;
+
+}
+
+.fa{
+    font-weight: 900;
+    margin-right: 5px;
+}
+
+#BodySign{
+    background-color: white;
+    color: gray;
 }
